<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DietaAddActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbAddDieta"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbRefeicao" />

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>   
        
        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                style="@style/AppBaseTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linha"
                android:contentDescription="@string/linha"
                android:src="@drawable/linha" />
		
            </LinearLayout>
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >
			
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbAlimentos"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>   
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
			
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lbAlimento" />

             <AutoCompleteTextView
                 android:id="@+id/alimentos"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:completionHint="selecione um alimento"
                 android:completionThreshold="1" />           
        </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lbQnt" />

             <EditText
                 android:id="@+id/editText2"
                 android:layout_width="76dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="number"
                 android:text="@string/txtQnt"
                 android:textColorHint="@style/AppTheme"
                 android:textSize="12sp" >

                 <requestFocus />
             </EditText>

             <ImageButton
                 android:id="@+id/imageButton1"
                 android:layout_width="108dp"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/btAdd"
                 android:src="@drawable/add" />
         </LinearLayout>
         
         
         
  <!-- ****************************************** TABELA ********************************************* -->       
         
         <TableLayout           
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <!-- 2 columns -->

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            </TableRow>

            <!-- edittext span 2 column -->

            <!-- just draw a red line -->
<!-- ********************************* LINHA ********************************* -->
            <View
                android:layout_height="2dip"
                android:background="#FF0000" />

            <!-- 3 columns -->

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/lbColNome" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/lbColFonte" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/lbColCHO" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbColPTN" />

            </TableRow>

<!-- ********************************* LINHA ********************************* -->
			<View
                android:layout_height="2dip"
                android:background="#FF0000" />
			
			
            <!-- display this button in 3rd column via layout_column(zero based) -->

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            </TableRow>

            <!-- display this button in 2nd column via layout_column(zero based) -->

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>